# OpenGLSdl2

./: .gitignore  CMakeLists.txt
src/: imgui.ini  main  main.cpp
src/scene/: Scene.cpp  Scene.h  parallelepiped.cpp  triangle.cpp
src/scene/camera/: Camera.cpp  Camera.h
src/shaders/: parallelepiped.shader  triangle.shader
